--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.roey</groupId>
-    <artifactId>simplespringframework</artifactId>
+    <artifactId>simplespring</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
